--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "movidesk-api",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "Movidesk API",
   "main": "index.js",
   "directories": {
     "example": "examples"
   },
+  "dependencies": {
+    "axios": "^0.21.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
